# csci-366-fall2021-private

./: .gitignore  README.md  README.txt
assembly/: homework.lmc  homework.mips  mips_output.txt
c/battlebit/: CMakeLists.txt  DEMO_SCRIPT.md  README.md
c/battlebit/googletest/: CMakeLists.txt  Google_tests.cbp  Makefile  char_buff.cpp  cmake_install.cmake  game1.cpp  game2.cpp  repl.cpp
c/battlebit/src/: game.c  game.h  helper.c  helper.h  main.c  repl.c  server.c  server.h
c/homework/: CMakeLists.txt  c_homework.cpp
c/samples/: CMakeLists.txt  CPPDemo.cpp  bit_manipulation.c  functions.c  intro.c  pointers.c  stack_and_heap.c  strings_structs.c
cloud/: CLOUD_DEPLOY.md  Dockerfile  README.md  pom.xml
cloud/src/main/java/edu/montana/csci/csci366/archivecat/: Server.java
cloud/src/main/java/edu/montana/csci/csci366/archivecat/archiver/: Archive.java  Archiver.java
cloud/src/main/java/edu/montana/csci/csci366/archivecat/archiver/jobs/: AbstractDownloadJob.java  CssDownloadJob.java  DownloadJob.java  ImageDownloadJob.java  JavascriptDownloadJob.java
cloud/src/main/java/edu/montana/csci/csci366/archivecat/archiver/runners/: DownloadJobRunner.java  InThreadJobRunner.java  ThreadPoolJobRunner.java  (+1 more)
cloud/src/main/java/edu/montana/csci/csci366/web/: WebServer.java
cloud/src/main/resources/templates/: header.vm  index.vm
cloud/src/test/java/edu/montana/csci/csci366/archivecat/archiver/: ArchiveTest.java
grading/: assembly_results.txt  cloud.txt  project_1_results.txt  project_results.txt
grading/scripts/: autograde.rb  students.csv
(+5 files in other folders)
